--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,9 +2,10 @@
 Row wise styling
 */
 .container{
-  width: 300px;
+  width: 400px;
   background-color: #F8F8F8;
   border-radius: 15px;
+  height: 350px;
 }
 
 .col{
@@ -27,12 +28,16 @@ Buttonwise styling
   background-color: #00ff00;
   border-radius: 10px;
   text-align: center;
+  width: 60px;
+  height: 60px;
 }
 
 .plus, .minus, .multi, .divide{
   background-color: #daa520;
   border-radius: 10px;
   text-align: center;
+  width: 60px;
+  height: 60px;
 }
 
 .one,.two,.three,.four,.five,.six,.seven,.eight,.nine,.zero{
@@ -41,6 +46,7 @@ Buttonwise styling
   text-align: center;
   width: 60px;
   height: 60px;
+  margin-right: 20px;
 }
 
 .row{
