--- a/Styles/style.css
+++ b/Styles/style.css
@@ -24,6 +24,14 @@ Buttonwise styling
   text-align: right;
 }
 
+#display{
+  width: 325px;
+  margin-top: 10px;
+  margin-right: 15px;
+  text-align: right;
+  height: 20px;
+}
+
 .equal{
   background-color: #00ff00;
   border-radius: 10px;
